--- a/Website/style.css
+++ b/Website/style.css
@@ -8,7 +8,7 @@
     text-align: center;
     padding: 1% 3%;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 10%;
     font-family: Tw Cen MT;
     border-radius: 8px;
   }
@@ -24,6 +24,8 @@
   }
 
   body{
-    background: rgb(2,0,36);
-    background: linear-gradient(180deg, rgba(2,0,36,1) 0%, rgb(0, 0, 0) 20%, rgb(156, 156, 156) 50%, rgba(196,0,255,1) 100%);
+    background-image: url("assets/Background.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 300%;
   }
