--- a/Website/style.css
+++ b/Website/style.css
@@ -1,31 +1,52 @@
-.topnav {
+.navbar {
+  display:flex
+}
+.buttons {
     overflow: hidden;
   }
-  
-  .topnav a {
+
+  .buttons a {
     float: right;
     color: #f2f2f2;
     text-align: center;
     padding: 1% 3%;
     text-decoration: none;
-    font-size: 10%;
+    font-size: 150%;
     font-family: Tw Cen MT;
     border-radius: 8px;
+    position: sticky;
+    top: 0;
+    margin-top: 0;
   }
   
-  .topnav a:hover {
+  .buttons a:hover {
     background-color: #ddd;
     color: black;
   }
   
-  .topnav a.active {
+  .buttons a.active {
     background-color: #b0228c;
     color: white;
   }
 
-  body{
-    background-image: url("assets/Background.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    min-height: 300%;
-  }
+body{
+  background-image: url("assets/Background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  min-height: 120%;
+  overflow: auto;
+}
+
+.showcase {
+  margin: 5%;
+  border: 15px solid green;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 30%;
+}
+.showcase-text {
+  color: white;
+  font-family: Futura;
+}
