--- a/Website/style.css
+++ b/Website/style.css
@@ -1,57 +1,27 @@
+body {
+  background-image: url("assets/car.png");
+  background-image: url("assets/Background.png");
+  background-size: 100% 50%;
+  background-repeat: no-repeat;
+  margin:0;
+  color:black;
+}
+
 header {
-  position:fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  top: 0;
+  position:static;
+  padding:10px;
   background-color:rgb(26, 26, 26); color:white;
 }
 
-.button {
-  float: right;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 1% 3%;
-  text-decoration: none;
-  font-size: 150%;
-  font-family: Tw Cen MT;
-  border-radius: 8px;
-  position: relative;
-  top: 0;
-  margin-top: 0;
-}
-  
-.button:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.active {
-  background-color: #b0228c;
-}
-
-body {
-  margin: 0;
-  margin-top: 3%;
-  background-color: #E9E3E6;
-}
-
-.showcase-background {
-  background-image: url("assets/Background.png");
+footer {
+  background-color:rgb(26, 26, 26);
   color:white;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.single-button {
-  color: #f2f2f2;
-  background-color: #B0228C;
-  text-align: center;
-  padding: 10px 20px;
-  text-decoration: none;
-  font-size: 150%;
-  font-family: Tw Cen MT;
-  border-radius: 8px;
+  font-size: large;
+  position:fixed;
+  bottom: 0;
+  left: 0;
+  width:100%;
+  font-family: sans-serif;
 }
 
 h1 {
@@ -75,22 +45,56 @@ label {
   font-family: sans-serif;
 }
 
-footer {
-  background-color:rgb(26, 26, 26);
-  color:white;
-  font-size: large;
-  position:fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  font-family: sans-serif;
+.button {
+  float: right;
+  color: #f2f2f2;
+  text-align: center;
+  margin: 10px 10px;
+  padding: 10px 10px;
+  text-decoration: none;
+  font-size: 150%;
+  top:100%;
+  font-family: Tw Cen MT;
+  border-radius: 8px;
+}
+  
+.button:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: #b0228c;
+}
+
+.background {
+  position: fixed;
+  
+}
+
+.single-button {
+  color: #f2f2f2;
+  background-color: #B0228C;
+  text-align: center;
+  padding: 10px 20px;
+  text-decoration: none;
+  font-size: 150%;
+  font-family: Tw Cen MT;
+  border-radius: 8px;
+}
+
+.single-button:hover {
+  background-color: rgba(221, 221, 221, 0.925);
+  color: black;
 }
 
 .info {
-  padding-left: 20px;
+  padding: 20px;
+  text-decoration: none;
+  color:white
 }
 
-.socials {
-  float:right;
-  padding: 20px 20px 20px 20px;
+.showcase {
+  margin:40px;
+  color:white;
 }
