Attempt at different background for each page

--- a/Website/style.css
+++ b/Website/style.css
@@ -1,4 +1,4 @@
-body {
+body.home{
   background-image: url("assets/car.png");
   background-image: url("assets/Background.png");
   background-size: 100% 50%;
