--- a/Website/style.css
+++ b/Website/style.css
@@ -1,7 +1,7 @@
 .homebody {
   background-image: url("assets/car.png");
   background-image: url("assets/Background.png");
-  background-size: 100% 50%;
+  background-size: 100% 95%;
   background-repeat: no-repeat;
 }
 
@@ -9,6 +9,9 @@ body {
   position:static;
   margin:0;
   color:black;
+  background-color: #E9E3E6;
+  font-family: sans-serif;
+  font-size: 18px;
 }
 
 header {
@@ -46,10 +49,6 @@ h3 {
   font-size: xx-large;
 }
 
-p {
-  font-family: sans-serif;
-}
-
 label {
   font-family: sans-serif;
 }
@@ -84,7 +83,7 @@ label {
   color: #f2f2f2;
   background-color: #B0228C;
   text-align: center;
-  padding: 10px 20px;
+  padding: 10px 100px;
   text-decoration: none;
   font-size: 150%;
   font-family: Tw Cen MT;
@@ -99,14 +98,31 @@ label {
 .info {
   padding: 20px;
   text-decoration: none;
-  color:white
-}
-
-.showcase {
-  margin:20px;
   color:white;
 }
 
+.showcase {
+  width:60%;
+  margin: auto;
+  color:white;
+  display: flex;
+  text-align:center;
+}
+
+.column {
+  flex: 50%;
+  padding: 5px;
+}
+
 .betterbody {
-  margin: 10px;
+  width: 50%;
+  margin: auto;
+  margin-top: 80px;
+  margin-bottom: 200px;
+  background-color: white;
+  border-radius: 2px;
+  box-shadow: 0px 0px 40px rgb(100, 100, 100);
+  box-sizing: border-box;
+  padding: 10px 50px 50px ;
+  text-align: center;
 }
